# marketo-cli

./: .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  go.mod  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
cmd/mrkto/: main.go
docs/: command-model.md  examples.md  profiles.md
internal/client/: client.go  client_test.go  token_cache.go  token_cache_test.go
internal/cmd/: activity.go  activity_test.go  api.go  api_test.go  auth.go  auth_test.go  company.go  company_test.go  exit.go  folder.go  lead.go  lead_test.go  program.go  program_test.go  root.go  root_test.go  runtime.go  setup.go  skill.go  skill_test.go  smart_campaign.go  smart_campaign_test.go  smart_list.go  smart_list_test.go  static_list.go  static_list_test.go  stats.go  stats_test.go
internal/config/: config.go  config_test.go
internal/output/: output.go  output_test.go
internal/profile/: profile.go  profile_test.go
pyinstaller/hooks/: hook-mrkto.cli.py
scripts/: build-binary.sh
skills/mrkto/: SKILL.md
src/mrkto/: __init__.py  __main__.py  cli.py  client.py  config.py  help.py  output.py
src/mrkto/resources/: activity.py  api.py  auth.py  campaign.py  company.py  lead.py  list.py  program.py  setup.py  skill.py  smart_campaign.py  smart_list.py  static_list.py  stats.py
tests/: test_cli.py  test_client.py  test_config.py  test_output.py
