[project]
name = "marketo-cli"
version = "0.1.0"
description = "Lightweight CLI for the Marketo REST API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Daniel Ng", email = "dan.ng@itod.ca" }]
keywords = ["marketo", "cli", "marketing-automation", "rest-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]

dependencies = [
    "requests>=2.28",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3"]

[project.scripts]
mrkto = "mrkto.cli:main"

[project.urls]
Repository = "https://github.com/itodca/marketo-cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mrkto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
