[project]
name = "marketo-cli"
version = "0.1.1"
description = "Public beta CLI for the Marketo REST API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Daniel Ng", email = "dan.ng@itod.ca" }]
keywords = ["marketo", "cli", "marketing-automation", "rest-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]

dependencies = [
    "requests>=2.28",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3"]
build = ["pyinstaller>=6"]

[project.scripts]
mrkto = "mrkto.cli:main"

[project.urls]
Homepage = "https://github.com/itodca/marketo-cli"
Repository = "https://github.com/itodca/marketo-cli"
Issues = "https://github.com/itodca/marketo-cli/issues"
Changelog = "https://github.com/itodca/marketo-cli/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mrkto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
